examples/let.js
if (true) {
  var foo = 1;
  let bar = 2;
}

console.log(foo);
// 1
console.log(bar);
// ReferenceError: bar is not defined
